# uniswap-get-reserves-benchmark

./: Cargo.toml  README.md  env
src/: lib.rs  main.rs
src/api/: get_pairs.rs  get_reserves.rs  mod.rs  models.rs
src/blockchain/: abi.rs  get_reserves.rs  mod.rs
src/config/: args.rs
