[package]
name = "pair-fetching-performance-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
eyre = "0.6"
tokio = { version = "1.27.0", features = ["full", "time"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
dotenv = "0.15.0"
ethers = "2.0"
indicatif = "0.17.6"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
